--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,16 @@ dependencies:
 #  carousel_pro: ^1.0.0
   percent_indicator: ^4.2.3
   youtube_player_flutter: ^8.1.2
-  provider: ^6.0.3
+  provider: ^6.0.5
   image_picker: ^1.0.1
   firebase_storage: ^11.2.5
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.3
   firebase_auth: ^4.7.1
+  google_fonts: ^4.0.4
+  google_sign_in: ^6.1.0
+  hexcolor: ^3.0.1
+  get: ^4.6.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
