--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_sign_in: ^6.1.0
   hexcolor: ^3.0.1
   get: ^4.6.5
+  modal_progress_hud_nsn: ^0.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
