--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-#  carousel_slider: ^4.0.0
-#  carousel_pro: ^1.0.0
+  carousel_slider: ^4.0.0
   percent_indicator: ^4.2.3
-  youtube_player_flutter: ^8.1.2
+  dotted_border: ^2.0.0+3
+  youtube_player_flutter:  ^8.1.2
   provider: ^6.0.5
   image_picker: ^1.0.1
   firebase_storage: ^11.2.5
@@ -77,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/icons/
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
