--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,14 @@ dependencies:
   firebase_storage: ^11.2.5
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.3
+  flutter_switch: ^0.3.2
   firebase_auth: ^4.7.1
   google_fonts: ^4.0.4
   google_sign_in: ^6.1.0
   hexcolor: ^3.0.1
   get: ^4.6.5
   modal_progress_hud_nsn: ^0.4.0
-  flutter_switch: ^0.3.2
+  youtube_explode_dart: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
