--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,13 @@ dependencies:
   firebase_auth: ^4.7.1
   google_fonts: ^4.0.4
   google_sign_in: ^6.1.0
+  smooth_page_indicator: ^1.1.0
   hexcolor: ^3.0.1
   get: ^4.6.5
   modal_progress_hud_nsn: ^0.4.0
   youtube_explode_dart: ^2.0.1
+  flutter_svg: ^2.0.7
+  shared_preferences: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
