--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_svg: ^2.0.7
   shared_preferences: ^2.2.0
   firebase_app_check: ^0.1.5+2
+  url_launcher: ^6.1.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
