--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,19 @@
 buildscript {
-    ext.kotlin_version = '1.8.20'
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.15'
     }
+}
+
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.9.10'
 }
 
 allprojects {
@@ -20,12 +24,20 @@ allprojects {
 }
 
 rootProject.buildDir = '../build'
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(':app')
 }
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+
+//tasks.register("clean", Delete) {
+//    delete rootProject.buildDir
+//}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
