--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   shared_preferences: ^2.2.0
   firebase_app_check: ^0.1.5+2
   url_launcher: ^6.1.12
+  rename: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
