--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "artisian" "\0"
+            VALUE "FileDescription", "Artisians" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "artisian" "\0"
+            VALUE "InternalName", "Artisians" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "artisian.exe" "\0"
-            VALUE "ProductName", "artisian" "\0"
+            VALUE "ProductName", "Artisians" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
