--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,8 @@ android {
         implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
         implementation("com.google.firebase:firebase-analytics-ktx")
         implementation 'com.android.support:multidex:1.0.3'
+        implementation 'com.google.android.gms:play-services-ads:22.3.0'
+
     }
 }
 
