--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_app_check: ^0.1.5+2
   url_launcher: ^6.1.12
   rename: ^2.1.1
+  google_mobile_ads: ^3.0.0
+  lottie: ^2.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
